Gtk-3.18: [GtkScrollBar] Fix mistakes in margins

--- a/gtk-3.18/_common.scss
+++ b/gtk-3.18/_common.scss
@@ -2122,8 +2122,8 @@ column-header.button.dnd { // for treeview-like derive widgets
         }
       }
       &.horizontal .slider {
-        margin-top: 0;
-        margin-bottom: 4px;
+        margin-top: 4px;
+        margin-bottom: 0;
         margin-left: 0;
         margin-right: 0;
       }
