--- a/gtk-3.18/gtk-dark.css
+++ b/gtk-3.18/gtk-dark.css
@@ -2532,8 +2532,8 @@ column-header.button.dnd, column-header .button.dnd {
         margin-left: 4px;
         margin-right: 0; }
     .scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal .slider {
-      margin-top: 0;
-      margin-bottom: 4px;
+      margin-top: 4px;
+      margin-bottom: 0;
       margin-left: 0;
       margin-right: 0; }
   .scrollbar.overlay-indicator.dragging .trough, .scrollbar.overlay-indicator.hovering .trough {
